# pr1m8

./: .gitignore  CLAUDE.md  README.md  README_current_backup.md  pyproject.toml
.github/workflows/: contribution-snake.yml  metrics.yml  profile-stats.yml  projects.yml  repo-cards.yml  snake.yml
scripts/: render_markdown.py  view_profile.py
