[project]
name = "github-profile-viewer"
version = "0.1.0"
description = "GitHub profile viewer using Playwright"
authors = [{name = "Will", email = ""}]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[project.scripts]
view-profile = "view_profile:main"